# mps-perf-lab

./: .gitignore  Makefile  README.md  pyproject.toml
bench/: model_ab.py  op_wrappers.py  runner.py
detect/: fallback_probe.py
metrics/: mps_utilization.py
mps_fallback_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ops/: shapesets.py  targets.seed.yaml
report/: aggregate.py  summary.md
report/templates/: summary.md.j2
scripts/: bench_all.sh  check_ops.py  check_requested_ops.py  pick_targets.py  scan_all_aten_ops.py  sync_requests.py
